[ Tools ] - create functions send

--- a/README
+++ b/README
@@ -1,1 +1,10 @@
 README
+
+Code HTTP : 
+200 : Requête exécutée avec succès. 	Success.
+400 : Mauvaise requête.             	Invalid request format.
+401 : Requête non autorisée.        	Invalid API Key.
+402 : Echec de la requête.           	We had a problem with our API.
+403 : Requête interdite. 	            You do not have access to the requested resource.
+404 : Non trouvée. 	                    API not found.
+500 : Erreur interne du serveur.    	We had a problem with our server.
